find_package(ITK CONFIG REQUIRED)

include(${ITK_USE_FILE})

add_executable(test_filtering test_filtering_algorithm.cpp )

target_link_libraries(test_filtering PUBLIC
imageprocessing
${ITK_LIBRARIES}
)

add_executable(test_itk_canny test_itk_canny.cpp)

target_link_libraries(test_itk_canny PUBLIC
imageprocessing
${ITK_LIBRARIES}
)

add_executable(test_itk_circle_extraction test_hough_circle.cpp)

target_link_libraries(test_itk_circle_extraction PUBLIC
imageprocessing
${ITK_LIBRARIES}
)

add_executable(test_wrapped_circle test_wrapped_circle.cpp)

target_link_libraries(test_wrapped_circle PUBLIC
imageprocessing
${ITK_LIBRARIES}
)

add_executable(test_manel_itk test_itk_manel.cpp)

target_compile_definitions(test_manel_itk PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_manel_itk PUBLIC
imageprocessing
${ITK_LIBRARIES}
)



add_executable(test_debug_api debug_image_orientation_and_position.cpp)

target_compile_definitions(test_debug_api PRIVATE vsgXchange_FOUND)
target_compile_definitions(test_debug_api PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(test_debug_api
PUBLIC
renderable
imageprocessing
${ITK_LIBRARIES}
)

add_executable(convert_Plus2ITK_image convert_Plus2ITK_image.cpp)

target_compile_definitions(convert_Plus2ITK_image PRIVATE vsgXchange_FOUND)
target_compile_definitions(convert_Plus2ITK_image PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(convert_Plus2ITK_image
PUBLIC
communication
renderable
imageprocessing
${ITK_LIBRARIES}
)


add_executable(test_baby_steps baby_steps.cpp)

target_compile_definitions(test_baby_steps PRIVATE vsgXchange_FOUND)
target_compile_definitions(test_baby_steps PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(test_baby_steps
PUBLIC
communication
renderable
imageprocessing
${ITK_LIBRARIES}
)

add_subdirectory(experiments_of_saturday)
add_subdirectory(volumetric)
add_subdirectory(registration_strategies_exploration)
add_subdirectory(registration_us_to_tc)
add_subdirectory(phantom_line_segmentation)


add_executable(extract_oblique_slice extract_oblique_slice.cpp)

target_compile_definitions(extract_oblique_slice PRIVATE vsgXchange_FOUND)
target_compile_definitions(extract_oblique_slice PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(extract_oblique_slice
PUBLIC
communication
renderable
imageprocessing
${ITK_LIBRARIES}
)

add_executable(real_time_extract_oblique_slice real_time_extract_oblique_slice.cpp)

target_compile_definitions(real_time_extract_oblique_slice PRIVATE vsgXchange_FOUND)
target_compile_definitions(real_time_extract_oblique_slice PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(real_time_extract_oblique_slice
PUBLIC
communication
renderable
imageprocessing
${ITK_LIBRARIES}
)

add_executable(test_resampling_second_attempt test_resampling_second_attempt.cpp)

target_compile_definitions(test_resampling_second_attempt PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(test_resampling_second_attempt
PUBLIC
${ITK_LIBRARIES}
)

add_executable(test_just_centroid_computation single_isolated_testing.cpp)

target_compile_definitions(test_just_centroid_computation PRIVATE vsgXchange_FOUND)
target_compile_definitions(test_just_centroid_computation PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(test_just_centroid_computation
PUBLIC
communication
renderable
imageprocessing
${ITK_LIBRARIES}
)

add_executable(real_time_extract_oblique_slice_two_dim real_time_extract_oblique_slice_two_dim.cpp)

target_compile_definitions(real_time_extract_oblique_slice_two_dim PRIVATE vsgXchange_FOUND)
target_compile_definitions(real_time_extract_oblique_slice_two_dim PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(real_time_extract_oblique_slice_two_dim
PUBLIC
communication
imageprocessing
${ITK_LIBRARIES}
)

add_executable(real_time_extract_oblique_slice_two_dim_centered_traj real_time_extract_oblique_slice_two_dim_centered_trajectory.cpp)

target_compile_definitions(real_time_extract_oblique_slice_two_dim_centered_traj PRIVATE vsgXchange_FOUND)
target_compile_definitions(real_time_extract_oblique_slice_two_dim_centered_traj PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")
target_link_libraries(real_time_extract_oblique_slice_two_dim_centered_traj
PUBLIC
communication
imageprocessing
${ITK_LIBRARIES}
)


add_executable(print_dicom_image_data print_dicom_image_data.cpp)

target_compile_definitions(print_dicom_image_data PRIVATE vsgXchange_FOUND)
target_compile_definitions(print_dicom_image_data PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(print_dicom_image_data
PUBLIC
${ITK_LIBRARIES}
)

add_executable(test_registration_framework test_registration_framework.cpp)

target_compile_definitions(test_registration_framework PRIVATE vsgXchange_FOUND)
target_compile_definitions(test_registration_framework PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_registration_framework
PUBLIC
imageprocessing
${ITK_LIBRARIES}
)

add_executable(test_landmark_registration landmark_registration.cpp)

target_compile_definitions(test_landmark_registration PRIVATE vsgXchange_FOUND)
target_compile_definitions(test_landmark_registration PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_landmark_registration
PUBLIC
imageprocessing
${ITK_LIBRARIES}
)


add_executable(test_segment_surface test_segment_surface.cpp)

target_compile_definitions(test_segment_surface PRIVATE vsgXchange_FOUND)
target_compile_definitions(test_segment_surface PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_segment_surface
PUBLIC
imageprocessing
${ITK_LIBRARIES}
)