add_executable(test_handguidance_algorithm test_handguidance_algorithm.cpp)

target_compile_definitions(test_handguidance_algorithm PRIVATE SK_VULKAN)
target_compile_definitions(test_handguidance_algorithm PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_handguidance_algorithm PUBLIC
utils
robotutils
)

add_executable(test_print_robot_state test_print_robot_state.cpp)

target_compile_definitions(test_print_robot_state PRIVATE SK_VULKAN)
target_compile_definitions(test_print_robot_state PRIVATE NOMINMAX)
target_compile_definitions(test_print_robot_state PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_print_robot_state PUBLIC
utils
robotutils
${OPERATING_SYSTEM_REQUIRMENTS}
)

add_executable(test_wall_avoidance_algorithm test_wall_avoidance_algorithm.cpp)

target_compile_definitions(test_wall_avoidance_algorithm PRIVATE SK_VULKAN)
target_compile_definitions(test_wall_avoidance_algorithm PRIVATE NOMINMAX)
target_compile_definitions(test_wall_avoidance_algorithm PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_wall_avoidance_algorithm PUBLIC
utils
robotutils
renderable
)


add_executable(test_joint_velocity_control test_joint_velocity_control.cpp)

target_compile_definitions(test_joint_velocity_control PRIVATE SK_VULKAN)
target_compile_definitions(test_joint_velocity_control PRIVATE NOMINMAX)
target_compile_definitions(test_joint_velocity_control PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_joint_velocity_control PUBLIC
utils
robotutils
renderable
)

add_executable(visualize_filtered_velocity visualize_filtered_velocity.cpp)

target_compile_definitions(visualize_filtered_velocity PRIVATE SK_VULKAN)
target_compile_definitions(visualize_filtered_velocity PRIVATE NOMINMAX)
target_compile_definitions(visualize_filtered_velocity PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(visualize_filtered_velocity PUBLIC
utils
robotutils
renderable
)


add_executable(test_rhytmic_motion test_rhytmic_motion.cpp)

target_compile_definitions(test_rhytmic_motion PRIVATE SK_VULKAN)
target_compile_definitions(test_rhytmic_motion PRIVATE NOMINMAX)
target_compile_definitions(test_rhytmic_motion PRIVATE CURAN_COPIED_RESOURCE_PATH="${post_build_resource_path}")

target_link_libraries(test_rhytmic_motion PUBLIC
utils
robotutils
renderable
)

add_executable(stupid_filter_test stupid_filter_test.cpp)

target_compile_definitions(stupid_filter_test PRIVATE NOMINMAX)

target_link_libraries(stupid_filter_test PUBLIC
utils
robotutils
)


add_executable(test_internal_rbdl_logic test_internal_rbdl_logic.cpp)

target_compile_definitions(test_internal_rbdl_logic PRIVATE NOMINMAX)

target_link_libraries(test_internal_rbdl_logic PUBLIC
utils
robotutils
nlohmann_json 
nlohmann_json::nlohmann_json 
)

add_executable(eigen_decomposition_for_impedance_controller eigen_decomposition_for_impedance_controller.cpp)

target_compile_definitions(eigen_decomposition_for_impedance_controller PRIVATE NOMINMAX)

target_link_libraries(eigen_decomposition_for_impedance_controller PUBLIC
utils
robotutils
)

